# ninmu-code

./: AGENTS.md  CLAUDE.md
docs/: TUI-USER-GUIDE.md
src/: Cargo.toml
src/crates/ninmu-api/src/: lib.rs  repair.rs
src/crates/ninmu-api/src/providers/: mod.rs  openai_compat.rs
src/crates/ninmu-api/tests/: deepseek_e2e.rs
src/crates/ninmu-cli/: Cargo.toml
src/crates/ninmu-cli/src/: args.rs  file_ref.rs  main.rs  manifest_adapter.rs  run_task.rs  task_events.rs
src/crates/ninmu-cli/src/tui/: ratatui_app.rs
src/crates/ninmu-cli/tests/: cli_manifest.rs  worker_mode.rs
src/crates/ninmu-cli/tests/fixtures/: cell_manifest_empty_objective.yaml  cell_manifest_fixed_model.yaml
src/crates/ninmu-runtime/: Cargo.toml
src/crates/ninmu-runtime/src/: cache_stable.rs  conversation.rs  event_mapper.rs  lib.rs  oamp_client.rs  prompt.rs  usage.rs
src/crates/ninmu-runtime/tests/: event_mapper_test.rs  oamp_client_test.rs
src/crates/ninmu-tools/: Cargo.toml
src/crates/ninmu-tools/src/: lib.rs
src/crates/ninmu-tools/tests/: memory_tool_test.rs
src/crates/substrate-types/: Cargo.toml
src/crates/substrate-types/src/: event.rs  identity.rs  lib.rs  manifest.rs  result.rs  validation.rs
src/crates/substrate-types/tests/: event_test.rs  identity_test.rs  integration_test.rs  manifest_test.rs  result_test.rs
src/crates/substrate-types/tests/manifest_fixtures/: invalid_bad_trust_level.yaml  invalid_missing_objective.yaml  valid_full.yaml  valid_minimal.yaml
